<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/faqTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_entry"
        android:padding="16dp"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/updateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_for_updates"
        android:padding="16dp"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_selection_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radioSystemDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_system_default" />

        <RadioButton
            android:id="@+id/radioChinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_chinese" />

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_english" />

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_and_restart" />


</LinearLayout>
